--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -9,8 +9,10 @@
     <div class="row">
 
         <div class="col-sm-12">
-
-            <h2>@Html.DisplayFor(model => model.FullCourseName)</h2>
+            <div class="header">
+                <h2>@Html.DisplayFor(model => model.FullCourseName)</h2>
+            </div>
+            
 
             <p>
                 @Html.DisplayFor(model => model.Description)
@@ -36,47 +38,68 @@
         </div>
 
     </div>
+    <br />
     <div class="row">
 
-        <div class="col-sm-4">
-            <h2>Moduler</h2>
-            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
-            {
-                <p>@Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null)</p>
-            }
+        <div class="col-sm-7">
 
-            <ul>
+            
+
+            <table class="table">
+                <tr class="headerRow">
+                    <th>                        @Html.DisplayNameFor(model => model.Modules)                </th>
+                    <th>                        @Html.DisplayNameFor(model => model.StartDate)                    </th>
+                    <th>                        @Html.DisplayNameFor(model => model.EndDate)                    </th>
+                    <th>                        @Html.DisplayNameFor(model => model.Description)                    </th>
+                </tr>
+
+
+                @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+                 {
+                    <tr><td>@Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null)</td></tr>
+                }
+
                 @foreach (var item in Model.Modules)
                 {
-                    <li>@Html.ActionLink(item.Name, "Details", "CourseModules", new { id = item.Id }, null)</li>
+                    <tr>
+                        <td> @Html.ActionLink(item.Name, "Details", "CourseModules", new { id = item.Id},null)                        </td>
+                        <td>                            @Html.DisplayFor(modelItem => item.StartDate)                        </td>
+                        <td>                            @Html.DisplayFor(modelItem => item.EndDate)                        </td>
+                        <td>                            @Html.DisplayFor(modelItem => item.Description)                        </td>
+                    </tr>
                 }
-            </ul>
+
+            </table>
+
+        </div>
+        <div class="col-sm-1">
+
         </div>
 
-
-        @if (Model.HaveDocuments || User.IsInRole(RoleName.teacher))
-        {
             <div class="col-sm-4">
-                <h2>Dokument</h2>
-                @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+
+                @if (Model.HaveDocuments || User.IsInRole(RoleName.teacher))
                 {
-                <p>@Html.ActionLink("Lägg till dokument", "UploadDocument", "Document", new { courseId = Model.Id }, null)</p>
+
+                    <h2>Dokument</h2>
+                    if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+                    {
+                        <p>@Html.ActionLink("Lägg till dokument", "UploadDocument", "Document", new { courseId = Model.Id }, null)</p>
+                    }
+                    @Html.Action("Documents", "Document", new { courseId = Model.Id })
+
+
                 }
-                @Html.Action("Documents", "Document", new { courseId = Model.Id })
-
-            </div>
-        }
 
 
-        <div class="col-sm-4">
 
-            <h2>Elever</h2>
-            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+                <h2>Elever</h2>
+                @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
             {
-                <p>@Html.ActionLink("Lägg till elev", "Create", "Student", new { id = Model.Id }, null)</p>
-            }
-            @Html.Action("Students", "Student", new { id = Model.Id })
-        </div>
+                    <p>@Html.ActionLink("Lägg till elev", "Create", "Student", new { id = Model.Id }, null)</p>
+                }
+                @Html.Action("Students", "Student", new { id = Model.Id })
+            </div>
 
-    </div>
+        </div>
 </div>
