Change layout and functionality of ModuleActivities Edit and Create

--- a/Learny/Views/ModuleActivities/_ActivitiesPartial.cshtml
+++ b/Learny/Views/ModuleActivities/_ActivitiesPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Learny.ViewModels.ModuleActivityViewModel>
 
 <table class="table">
-    <tr>
+    <tr class="headerRow">
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
