--- a/Learny/Views/ModuleActivities/Manage.cshtml
+++ b/Learny/Views/ModuleActivities/Manage.cshtml
@@ -13,16 +13,25 @@
     var actionName = "";
 }
 
-@if (Model.Edit)
+@if (Model.EditMode)
 {
-    <h3>@Model.Name</h3>
     actionName = "Edit";
+
+    <div class="header">
+        <h3>@Model.Name</h3>
+    </div>
+
 }
 else
 {
-    <h3>Lägg till aktivitet</h3>
     actionName = "Create";
+
+    <div class="header">
+        <h3>Lägg till aktivitet</h3>
+    </div>
+
 }
+
 
 
 @using (Html.BeginForm(actionName, "ModuleActivities"))
@@ -45,7 +54,7 @@ else
             @Html.LabelFor(model => model.ActivityTypes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.ActivityTypeId,
-                     new SelectList(Model.ActivityTypes, "Id", "Name"), "-- Välj aktivitetstyp --", htmlAttributes: new { @class = "form-control" })
+                               new SelectList(Model.ActivityTypes, "Id", "Name"), "-- Välj aktivitetstyp --", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ActivityTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -86,16 +95,27 @@ else
         @Html.HiddenFor(model => model.FullCourseName)
         @Html.HiddenFor(model => model.CourseModuleId)
         @Html.HiddenFor(model => model.ModuleName)
-        @Html.HiddenFor(model => model.Edit)
-        @Html.HiddenFor(model => model.ListEdit)
+        @Html.HiddenFor(model => model.EditMode)
+        @Html.HiddenFor(model => model.ShowActivityList)
 
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                @if (Model.Edit)
+                @if (Model.EditMode)
                 {
-                    @*@Html.ActionLink("Tag bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })*@
                     <input type="submit" value="Spara ändringar" class="btn btn-default" />
+                    @:&nbsp;
+                    if (Model.ShowActivityList)
+                    {
+                        @Html.ActionLink("Avbryt", "Create", new { id = Model.CourseModuleId, ShowActivityList = Model.ShowActivityList }, htmlAttributes: new { @class = "btn btn-default" });
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Avbryt", "Details", new { id = Model.CourseModuleId }, htmlAttributes: new { @class = "btn btn-default" });
+                    }
+                    @:&nbsp;
+                    @Html.ActionLink("Tag bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
+
                 }
                 else
                 {
@@ -112,7 +132,7 @@ else
     <div class="alert alert-success alert-dismissable fade in">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         @TempData["FeedbackMessage"]
-        @{var msgObj = (Learny.ViewModels.ModuleActivityCreateViewModel)@TempData["FeedbackData"];}
+        @{var msgObj = (Learny.Models.ModuleActivity)@TempData["FeedbackData"];}
         <br /><br />
         @Html.LabelFor(m => msgObj.Name): @Html.DisplayFor(m => msgObj.Name)
         <br />
@@ -122,22 +142,16 @@ else
         <br />
         @Html.LabelFor(m => msgObj.EndDate): @Html.DisplayFor(m => msgObj.EndDate)
         <br /><br />
-        @if (!Model.Edit)
+        @if (!Model.EditMode)
         {
-            @Html.ActionLink("Ändra |", "Edit", new { id = msgObj.Id, listEdit = true });
+            @Html.ActionLink("Ändra |", "Edit", new { id = msgObj.Id, ShowActivityList = Model.ShowActivityList });
             //|
         }
-        @Html.ActionLink("Gå till aktivitet", "Details", "ModuleActivities", new { id = msgObj.Id }, null)
+        @Html.ActionLink("Till aktiviteten", "Details", "ModuleActivities", new { id = msgObj.Id }, null)
     </div>
-            }
-
-@if (Model.Edit && Model.ListEdit)
-{
-
-    @Html.ActionLink("Ny aktivitet", "Create", "ModuleActivities", new { id = Model.CourseId }, null)
-    <br /><br />
 }
-@if (!Model.Edit || Model.ListEdit)
+
+@if (Model.ShowActivityList)
 {
     @*View partial view with activities*@
     @Html.Action("Activities", "ModuleActivities", new { id = Model.CourseModuleId, linkToEditInCreateView = true })
