--- a/Learny/Views/Courses/Index.cshtml
+++ b/Learny/Views/Courses/Index.cshtml
@@ -9,39 +9,111 @@
 <p>
     @Html.ActionLink("Lägg till kurs", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseCode)
-        </th>        
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-   
-    <tr>
-        <td>
-           @Html.ActionLink(item.Name, "Details", new { id = item.Id }) 
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CourseCode)
-        </td>        
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>        
-    </tr>
+<ul id="accordion" class="accordion">
+    <li>
+        <div class="link"><i class="fa fa-database"></i>Tidigare<i class="fa fa-chevron-down"></i></div>
+        <ul class="submenu">
+            @foreach (var item in Model)
+            {
+
+                // I tried to add some "blanks" at the end of the name dynamically, assuming a 100+5 chars width column available for the Name of the course
+                // the same calculation should be done for CourseCode, StartDate/EndDate. I this way I can allign the info in each fixed side column
+                // and the course info are better readable.
+
+                // NOTE! in the Dropdpwn.css at the end I ALLOW the browser to show blanks in this page for <a> and <span> under <li> !
+
+                // Name
+                int currentNamelenght = item.Name.Length;
+                int maxColumnNameLength = 100;   // assuming max 100 chars in Name. We can change it
+                int extraSpacesAfterName = 4; // assuming max 5 spaces after Name (in case its size is = to 100 chars)style="display:inline-block; width: 300px;"
+                int maxNameLengthWithSpaces = maxColumnNameLength + extraSpacesAfterName;
+                int dynamicPaddingforName = maxNameLengthWithSpaces - currentNamelenght;  // Evaluate how many &nbsp; I need to have after the Name
+
+                // Course
+                int dynamicPaddingForCourse = 100 + 4 - item.CourseCode.Length;
+
+                // Date
+                // For date the PadRight() method applied after conversion to string does not seem to work !? I added spaces manually
+                // int dynamicPaddingForDate = 4;  // This is obvously fixed since date size is always known :-) 
+
+                <li><a href="@Url.Action("Details","Courses", new { id = item.Id })">@item.Name.PadRight(dynamicPaddingforName, ' ')<span>@Html.DisplayFor(modelItem => item.CourseCode).ToString().PadRight(dynamicPaddingForCourse, ' ')</span><span>@Html.DisplayFor(modelItem => item.StartDate)     </span><span>@Html.DisplayFor(modelItem => item.EndDate)</span></a></li>
+
+            }
+        </ul>
+    </li>
+    <li>
+        <div class="link"><i class="fa fa-code"></i>Pågående<i class="fa fa-chevron-down"></i></div>
+        <ul class="submenu">
+            <li><a href="#">Javascript</a></li>
+            <li><a href="#">jQuery</a></li>
+            <li><a href="#">Ruby</a></li>
+        </ul>
+    </li>
+    <li>
+        <div class="link"><i class="fa fa-mobile"></i>Kommande<i class="fa fa-chevron-down"></i></div>
+        <ul class="submenu">
+            <li><a href="#">Tablet</a></li>
+            <li><a href="#">Mobile</a></li>
+            <li><a href="#">Desktop</a></li>
+        </ul>
+    </li>
+    @*<li>
+            <div class="link"><i class="fa fa-globe"></i>Global<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li><a href="#">Google</a></li>
+                <li><a href="#">Bing</a></li>
+                <li><a href="#">Yahoo</a></li>
+            </ul>
+        </li>*@
+</ul>
+
+
+
+<!--    OLD SESSION HERE   -->
+@*<table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CourseCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+
+            <tr>
+                <td>
+                    @Html.ActionLink(item.Name, "Details", new { id = item.Id })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CourseCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+            </tr>
+        }
+
+    </table>*@
+
+@section styles {
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/Content/Dropdown.css" rel="stylesheet" />
 }
-
-</table>
+@section scripts {
+    <script src="~/Client Scripts/DropdownjQuery.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+}
