--- a/Learny/Views/CourseModules/Delete.cshtml
+++ b/Learny/Views/CourseModules/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Learny.Models.CourseModule
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Ta bort";
     bool allowDelete = true;
     if (Model.Documents.Count > 0)
     {
@@ -20,11 +20,10 @@
     }
 }
 
-<h2>Delete</h2>
+<h2>Ta bort</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Är du säker på att du vill ta bort den här modulen?</h3>
 <div>
-    <h4>CourseModule</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -59,14 +58,6 @@
             @Html.DisplayFor(model => model.EndDate)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CourseId)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm())
@@ -83,7 +74,7 @@
                 <input type="submit" value="Ta bort" class="btn btn-default" disabled/>
             }
             |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Tillbaka", "Details", "CourseModules", new { id = Model.CourseId }, null)
             @if (!allowDelete)
             {
                 <br />
