--- a/Learny/Views/CourseModules/Delete.cshtml
+++ b/Learny/Views/CourseModules/Delete.cshtml
@@ -79,7 +79,7 @@
                 <input type="submit" value="Ta bort" class="btn btn-default" disabled />
             }
             |
-            @Html.ActionLink("Tillbaka", "Details", "CourseModules", new { id = Model.CourseId }, null)
+            @Html.ActionLink("Tillbaka", "Details", new { id = Model.Id })
             @if (!allowDelete)
             {
                 <br />
