--- a/Learny/Views/Courses/Delete.cshtml
+++ b/Learny/Views/Courses/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Learny.Models.Course
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Ta bort";
     bool allowDelete = true;
     if (Model.Documents.Count > 0)
     {
@@ -32,9 +32,9 @@
     }
 }
 
-<h2>Delete</h2>
+<h2>Ta bort</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Är du säker på att du vill ta bort den här kursen?</h3>
 <div>
     <h4>Course</h4>
     <hr />
@@ -94,7 +94,7 @@
                 <input type="submit" value="Ta bort" class="btn btn-default" disabled />
             }
             |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Tillbaka", "Details", new { id = Model.Id })
             @if (!allowDelete)
             {
                 <br />
