--- a/Learny/Views/ModuleActivities/Delete.cshtml
+++ b/Learny/Views/ModuleActivities/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Learny.Models.ModuleActivity
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Ta bort";
     bool allowDelete = true;
     if (Model.Documents.Count > 0)
     {
@@ -9,15 +9,26 @@
     }
 }
 
-<h2>Delete</h2>
+<h2>Ta bort</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Är du säker på att du vill ta bort den här aktiviteten?</h3>
 <div>
-    <h4>ModuleActivity</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ActivityType.Name)
+            @Html.DisplayNameFor(model => model.CourseModule.Course)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CourseModule.Course.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CourseModule)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CourseModule.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ActivityType)
         </dt>
 
         <dd>
@@ -55,15 +66,6 @@
         <dd>
             @Html.DisplayFor(model => model.EndDate)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseModuleId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CourseModuleId)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
@@ -79,7 +81,7 @@
                 <input type="submit" value="Ta bort" class="btn btn-default" disabled />
             }
             |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Tillbaka", "Details", new { id = Model.Id })
             @if (!allowDelete)
             {
                 <br />
