--- a/Learny/Views/Courses/Delete.cshtml
+++ b/Learny/Views/Courses/Delete.cshtml
@@ -138,7 +138,9 @@
             @if (!allowDelete)
             {
                 <br />
-                <span class="alert-danger">Den här kursen eller dens moduler och aktiviteter har @nrOfDocuments dokument.</span>
+                <div class="alert alert-danger">
+                    <span>Den här kursen eller dens moduler och aktiviteter har @nrOfDocuments dokument.</span>
+                </div>
             }
         </div>
     }
