--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -19,6 +19,16 @@
     color: white;
 }
 
+ul {
+    display: block;
+    list-style-type: none;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0px;
+}
+
 
 .navbar {
     margin-bottom: 0;
