--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -74,7 +74,7 @@
         </div>
 
         <div class="col-sm-1">
-            //Empty column
+            @*Empty column*@
         </div>
 
         <div class="col-sm-4">
